--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Geosearch</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" max-scale="1" min-scale="1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1, min-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
